--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,10 @@
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
+          <script src="components/util/log.js"></script>
+          <script src="components/util/misc.js"></script>
+          <script src="components/util/number.js"></script>
+          <script src="components/util/time.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
