--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <!-- endbower -->
-      <script src="socket.io-client/socket.io.js"></script>
+      <script src="socket.io-client/dist/socket.io.js"></script>
     <!-- endbuild -->
 
 
