Fixed the build. The uglification is disabled.

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
     <!-- endbuild -->
 
 
-        <!-- build:js(.tmp) app/app.js -->
+        <!-- build:js(client) app/app.js -->
 
         <script src="app/app.js"></script>
           <!-- injector:js -->
